# py-usb-shutdown

./: LICENSE  README.md  pyinstaller.py  pyproject.toml  shell.nix
py_usb_shutdown/: __init__.py  cli.py
scripts/: linux_build.sh  pyinstaller.py  windows_build.ps1  windows_setup_python.ps1
