[tool.poetry]
name = "py-usb-shutdown"
version = "0.1.0"
description = ""
authors = ["xancoder <xancoder@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
cli = "cmd.cli:main"
build_linux = "scripts.pyinstaller:build_linux"
build_windows = "scripts.pyinstaller:build_windows"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
